<h5>1.17 Beta 1   [2017-09-04]</h5>
<hr>
- conversion of Userlog helper class to XMF (mamba)
- short array syntax (mamba)
- converted to Yoda syntax (mamba)
- CSS cosmetics (mamba) 

<h5>1.17 Alpha 3   [NOT RELEASED]</h5>
<hr>
- XOOPS 2.5.9, PHP 7 (mamba)
- Converted to XOOPS 2.5.8 Admin GUI (mamba)
- removed @version (mamba)
- PSR-2 code cosmetics (mamba)
- addNavigation(basename(__FILE__))  (mamba)
- dirname(__FILE__) to __DIR__ (mamba)
- replaced < br /> with < br > (mamba)
- Unnecessary double quotes (mamba)
- reference mismatch (mamba)
- Hardening to type safe (mamba)
- update Help (mamba)
- changed _handler to Handler (mamba)
- removed '/' from void HTML elements (&lt;br&gt;, &lt;img&gt;, etc) (mamba)
- HTML 5: removed 'selected' and 'checked' (mamba)
- updated file headers for consistency (mamba)
- renamed several $indexAdmin with $adminObject for consistency (mamba)
- Updates for PayPal changes (zyspec)
- added Contributing.md (mamba)
- moved functions to Utility class (mamba)
- include_once to require_once (mamba)
- php-cs-fixer updates (mamba)
- started conversion to XMF (mamba)
    &nbsp;&nbsp;- updated addInfoBoxLine entries (mamba)
    &nbsp;&nbsp;- displayNavigation(basename(__FILE__))  (mamba)
    &nbsp;&nbsp;- changed to ->displayButton('left') (mamba)



<h5>1.17 Alpha 2             [NOT RELEASED]</h5>
<hr>
- bug fixes (mamba)
- updated Browsecap to 2.1.1 (mamba)


<h5>1.17 Alpha 1             [NOT RELEASED]</h5>
<hr>
- removed @version (mamba)
- some PSR-2 code cosmetics (mamba)
- addNavigation(basename(__FILE__))  (mamba)
- dirname(__FILE__) to __DIR__ (mamba)
- XOOPS 2.5.8, PHP 7 (mamba)
- replaced < b /> with < b > (mamba)
- Unnecessary double quotes (mamba)
- reference mismatch (mamba)
- Hardening to type safe (mamba)
- update Help (mamba)
- changed _handler to Handler (mamba)
- moved all images, CSS, and JS files to /assets (mamba)
- renamed .html Smarty templates to .tpl (mamba)
- replaced UserlogRequest with XoopsRequest (mamba)