@@ -68,7 +68,6 @@ function xoops_module_update_userlog(XoopsModule $module, $prev_version = null)
 function update_userlog_v100(XoopsModule $module)
 {
     $field   = 'module_name';
-    $moduleDirName = basename(dirname(__DIR__));
     $userlog  = Userlog::getInstance();
     $ret     = $userlog->getHandler('log')->showFields($field);
     preg_match_all('!\d+!', $ret[$field]['Type'], $nums);
@@ -91,7 +90,6 @@ function update_userlog_v100(XoopsModule $module)
  */
 function update_userlog_v114(XoopsModule $module)
 {
-    $moduleDirName = basename(dirname(__DIR__));
     $userlog    = Userlog::getInstance();
     $logsetsObj = $userlog->getHandler('setting')->getAll();
     $ret        = true;
@@ -116,7 +114,6 @@ function update_userlog_v114(XoopsModule $module)
  */
 function update_userlog_v115(XoopsModule $module)
 {
-    $moduleDirName = basename(dirname(__DIR__));
     $userlog  = Userlog::getInstance();
     // Only change the field from INDEX to UNIQUE if it is not unique
     // if (isset($indexArr[0]["Non_unique"]) || $indexArr[0]["Non_unique"] == 1) { }
